@@ -10,6 +10,7 @@ tasks.withType(JavaCompile).configureEach {
 
 test {
     jvmArgs '--add-exports', 'jlsm.table/jlsm.table.internal=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED'
     jvmArgs '--add-modules', 'jdk.incubator.vector'
     jvmArgs '-ea'
 }
